# PoCAuthSystem

./: .gitignore  CMakeLists.txt  config.default.ini  config.h  main.cpp
auth/: AuthManager.cpp  AuthManager.h  AuthState.h  PermissionManager.cpp  PermissionManager.h  SecureTokenStorage.cpp  SecureTokenStorage.h
entities/: AuthTokens.h  Item.h  UserSession.h
models/: ItemModel.cpp  ItemModel.h
networking/: ApiEndpoints.cpp  ApiEndpoints.h  AuthApi.cpp  AuthApi.h  BaseApi.h  HttpClient.cpp  HttpClient.h  ItemApi.cpp  ItemApi.h
qml/: LoginPage.qml  Main.qml
